--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,8 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+.labelStar label:has(+ [required])::after {
+    content: " *";
+    color: red;
+}
